# service-orchestrator

./: LICENSE  README.md  pyproject.toml
frontend/: .eslintrc  .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ConnectionSnackbar.tsx  PtyTerminal.tsx  RefreshControl.tsx  ServicesTableComponent.tsx
frontend/src/hooks/: useURLService.ts  useURLTags.ts
frontend/src/utils/: serializationUtils.ts  socket.ts  stateUtils.ts
src/orchestrator/: __init__.py  __main__.py  config.py  orchestrator.py  service_host.py  systemd_service_proxy.py  web_server.py
src/orchestrator/frontend/: index.html
src/orchestrator/frontend/assets/: index-BNLYtJyG.js  index-BOrxzlJa.js  index-BthASitc.css  index-CSKctvZP.js  index-CejBslHc.js  index-CwFW1khV.js  index-DKM875dm.js  index-D_WIFr5R.js  index-MlHmxGFU.js
src/orchestrator/web_server/: __init__.py  command_channel_manager.py  setup_sio_events.py  web_server.py
